# autonomous_lane_following

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_ros2.txt  setup.py
adapters/: __init__.py  standalone_bus.py  video_source.py
config/: controller.yaml  fusion.yaml  hough_fallback.yaml  path_planning.yaml  perception.yaml  safety.yaml  sensors.yaml  visualization.yaml
core/: __init__.py  ai_diagnostics.py  controller.py  data_types.py  hough_lane_detector.py  lane_geometry.py  lane_mask_processor.py  lidar_obstacle_detector.py  logger.py  path_planner.py  safety_supervisor.py  sensor_fusion.py  virtual_lane_generator.py  yolo_lane_detector.py
docs/: ARCHITECTURE.md  TROUBLESHOOTING.md
logs/: .gitkeep
models/: .gitkeep
output_videos/: .gitkeep
scripts/: __init__.py  run_standalone.py  test_detectors.py
utils/: __init__.py  bev_utils.py  geometry_utils.py  kalman_filter.py  low_pass_filter.py  safety_utils.py
visualization/: lane_visualizer.py
