[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous_lane_following"
version = "0.1.0"
description = "Professional autonomous lane following system with safety features"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Fatih Barlas", email = "94764881+fatihbar@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "ultralytics>=8.0.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "PyYAML>=6.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "scikit-image>=0.21.0",
    "scipy>=1.10.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
ros2 = [
    "rclpy>=3.0.0",
    "sensor-msgs>=0.1.0",
    "geometry-msgs>=0.1.0",
    "cv-bridge>=3.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "pylint>=2.17.0",
]

[project.urls]
Homepage = "https://github.com/fatihbar/autonomous_lane_following"
Documentation = "https://github.com/fatihbar/autonomous_lane_following/tree/main/docs"
"Bug Tracker" = "https://github.com/fatihbar/autonomous_lane_following/issues"

[tool.setuptools]
packages = ["autonomous_lane_following"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=autonomous_lane_following --cov-report=html"
